<?xml version="1.0"?>
<package>
  <name>gauges</name>
  <version>1.0.1</version>
  <description>Launch virtual gauges for ROS topics.</description>

  <author email="andyz@utexas.edu">alexvs</author>

  <maintainer email="andyz@utexas.edu">andyz</maintainer>

  <url type="website">http://wiki.ros.org/gauges</url>

  <license>See License.txt</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>qt4</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>qt4</run_depend>

  <export>

  </export>
</package>
