<?xml version="1.0"?>
<package>
  <name>rqt_gauges</name>
  <version>1.0.7</version>
  <description>The rqt_gauges package</description>

  <maintainer email="andyz@utexas.edu">AndyZ</maintainer>

  <license>see License.txt</license>

  <url type="website">http://wiki.ros.org/gauges</url>
  <url type="repository">https://github.com/UTNuclearRoboticsPublic/gauges</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
