<?xml version="1.0"?>
<package>
  <name>rqt_gauges</name>
  <version>1.0.0</version>
  <description>Launch virtual gauges for ROS topics.</description>

  <author email="andyz@utexas.edu">andyz</author>

  <maintainer email="andyz@utexas.edu">andyz</maintainer>

  <url type="website">http://wiki.ros.org/gauges</url>

  <license>See License.txt</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
